[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'multi-video'
authors = [{ name = 'ostr00000' }]
version = '0.6.0'
description = "Tool to run many video at same time."

requires-python = '>=3.8'
dependencies = [
    'PyQt5',
    'boltons',
    'decorator',
    'more-itertools',
    'progressbar2',
    'pyqt-settings @ git+https://github.com/ostr00000/pyqt-settings@master#egg=pyqt-settings',
    'python-mpv',
]

[project.optional-dependencies]
dev = ['matplotlib']

[tool.setuptools.packages.find]
where = ['src']
exclude = ['*tests*']

[tool.setuptools.package-data]
'*' = ['*.svg', '*.jpg']

[project.scripts]
multi-video = 'multi_video.__main__:main'
